--- a/kontak.html
+++ b/kontak.html
@@ -92,11 +92,11 @@ p {
         <!-- Ini adalah tautan ke media sosial dengan ikon-ikon -->
         <div class="ikon-sosial">
             <!-- Ikon WhatsApp -->
-            <a href="https://wa.me/contoh-link-whatsapp" target="_blank">
+            <a href="https://wa.me/qr/FRONCU4QYIL7C1" target="_blank">
                 <img src="wa.png" alt="WhatsApp">
             </a>
             <!-- Ikon Instagram -->
-            <a href="https://www.instagram.com/contoh-link-instagram" target="_blank">
+            <a href="https://instagram.com/mariszadigitalab?igshid=MzMyNGUyNmU2YQ==" target="_blank">
                 <img src="ig.png" alt="Instagram">
             </a>
             <!-- Ikon Facebook -->
